feat: add blog section, event tracking, and navigation updates
implement comprehensive blog functionality with dynamic routing, featured blogs, and full article pages. add centralized event tracking system supporting both umami and google analytics (ga4). add blog link to navigation menu. implement structured data components for blogs and projects. enhance seo with dynamic sitemap generation. add code cleanup and type safety improvements.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.27.1",
     "next": "16.1.4",
     "react": "19.2.3",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
