--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.562.0",
     "maplibre-gl": "^5.16.0",
     "motion": "^12.27.1",
-    "next": "16.1.4",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-code-blocks": "^0.1.6",
     "react-dom": "19.2.3",
